// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomCardSection should render a custom card section 1`] = `
<styled.div
  alignItems="center"
  justifyContent="center"
>
  content
</styled.div>
`;

exports[`CustomCardSection should render a custom card section with custom style 1`] = `
<styled.div
  alignItems="space-between"
  justifyContent="flex-start"
>
  content
</styled.div>
`;
